[package]
name = "simple-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
redis = { version = "0.23.1", features = ["tokio-comp"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
