[package]
name = "simple-task"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A distributed task queue for learning Rust"
homepage = "https://github.com/Xyc2016/simple-task"
repository = "https://github.com/Xyc2016/simple-task"
readme = "README.md"
keywords = ["task-queue", "distributed"]
categories = ["concurrency", "parallelism"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
env_logger = "0.10.0"
log = "0.4.20"
redis = { version = "0.23.1", features = ["tokio-comp"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
yansi = "0.5.1"
